examples/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prom
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  type: ClusterIP
