examples/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom
spec:
  tls:
  - hosts: []
  rules:
  - http:
      paths:
      - backend:
          service:
            # name:
            port:
              number: 9090
        path: /
        pathType: Prefix
    # host:
